--- a/ListOfEmployees/ListOfEmployees/ListOfEmployees.csproj
+++ b/ListOfEmployees/ListOfEmployees/ListOfEmployees.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="View\Panels\" />
+  </ItemGroup>
+
 </Project>
